add runtime logs
